# CMakePractice

./: README.md
p1-hello/: CMakeLists.txt  hello
p2-command/: CMakeLists.txt  fun  fun.c  fun.h  main.c
p3-helloworld/: CMakeLists.txt
p3-helloworld/src/: CMakeLists.txt  main.c
p4-library/: CMakeLists.txt
p4-library/lib/: CMakeLists.txt  hello.c  hello.h
p5-use-library/: CMakeLists.txt
p5-use-library/src/: CMakeLists.txt  main.c
p6-cmake-constant/: CMakeLists.txt
p6-cmake-constant/anthor/: CMakeLists.txt
p6-cmake-constant/src/: CMakeLists.txt
p7-find-module/: CMakeLists.txt
p7-find-module/src/: CMakeLists.txt  main.c
p8-find-my-module/: CMakeLists.txt
p8-find-my-module/cmake/: FindHELLO.cmake
p8-find-my-module/src/: CMakeLists.txt  main.c
