PROJECT(HELLO) 
ADD_SUBDIRECTORY(src bin)

#EXECUTABLE_OUTPUT_PATH 常量变量 输出可执行路径
#PROJECT_BINARY_DIR 常量变量
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

#LIBRARY_OUTPUT_PATH 动态库输出路径
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

MESSAGE(STATUS EXECUTABLE_OUTPUT_PATH ${EXECUTABLE_OUTPUT_PATH})
MESSAGE(STATUS LIBRARY_OUTPUT_PATH ${LIBRARY_OUTPUT_PATH})
